--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,5 +8,8 @@
     <h:body>
         Hola SIstemas de Ventas
     </h:body>
+      <h:body>
+        Hola SIstemas de facturacion
+    </h:body>
 </html>
 
